--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,13 +72,13 @@ button {
 button:hover {
   background: #424242;
 }
-/* .login {
+.login {
   height: 460px;
   background: #eee;
   border-radius: 60% / 10%;
   transform: translateY(-180px);
   transition: 0.8s ease-in-out;
-} */
+}
 .login label {
   color: #573b8a;
   transform: scale(0.6);
