--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,30 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-label {
+/* label {
   justify-content: center;
   display: flex;
   margin: 60px;
   cursor: pointer;
-}
+} */
 
 input {
-  height: 20px;
+  /* height: 20px; */
   margin: 10px auto;
   border: none;
 }
 
 button {
+  margin: auto;
   width: 60%;
   height: 40px;
-  margin: 10px auto;
   display: block;
-  background: #3d3d3d;
+  background: linear-gradient(45deg, #006488, #030e8d);
   font-weight: bold;
-  transition: 0.3s ease-in-out;
+  transition: 1s ease-in-out;
   cursor: pointer;
+  color: rgb(0, 0, 0);
+  border-radius: 0.5rem;
 }
 button:hover {
-  background: #424242;
+  background: linear-gradient(45deg, #010376, #1868c8);
 }
 
